--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
     build_wheels:
-        name: Build wheels on ${{ matrix.os }}
+        name: Build wheels, ${{ matrix.os }}, ${{ matrix.python-version }}
         runs-on: ${{ matrix.os }}
         strategy:
             fail-fast: false
@@ -26,12 +26,7 @@ jobs:
               with:
                 python-version: '3.12'
 
-            - name: Install numpy
-              run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install --upgrade numpy
-
-            - name: Install OpenMP and numpy for mac
+            - name: Install OpenMP for mac
               if: runner.os == 'macos'
               run: |
                   # brew install libomp
@@ -177,7 +172,7 @@ jobs:
                   miniconda-version: "latest"
                   auto-update-conda: true
 
-            - name: Install OpenMP and numpy for mac
+            - name: Install OpenMP for mac
               if: matrix.os == 'macos-latest'
               run: |
                   brew install libomp
