--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -10,20 +10,22 @@ on:
 
 jobs:
     build_wheels:
-        name: Build wheels on ${{ matrix.os }} ${{ matrix.python-version }}
+        name: Build wheels, ${{ matrix.os }}, ${{ matrix.python-version }}
         runs-on: ${{ matrix.os }}
         strategy:
             fail-fast: false
             matrix:
-                os: [ubuntu-latest, windows-latest, macos-latest]
-                python-version: ['cp39', 'cp310', 'cp311', 'cp312', 'pp38', 'pp39', 'pp310']
-                exclude:
-                    - os: windows-latest
-                      python-version: 'pp38'
-                    - os: windows-latest
-                      python-version: 'pp39'
-                    - os: windows-latest
-                      python-version: 'pp310'
+                # os: [ubuntu-latest, windows-latest, macos-latest] # TEST
+                # python-version: ['cp39', 'cp310', 'cp311', 'cp312', 'pp38', 'pp39', 'pp310']
+                os: [windows-latest]
+                python-version: ['pp38', 'pp39', 'pp310']
+                # exclude: # TEST
+                #     - os: windows-latest
+                #       python-version: 'pp38'
+                #     - os: windows-latest
+                #       python-version: 'pp39'
+                #     - os: windows-latest
+                #       python-version: 'pp310'
         steps:
             - name: Checkout
               uses: actions/checkout@v4
@@ -33,12 +35,7 @@ jobs:
               with:
                 python-version: '3.12'
 
-            - name: Install numpy
-              run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install --upgrade numpy
-
-            - name: Install OpenMP and numpy for mac
+            - name: Install OpenMP for mac
               if: runner.os == 'macos'
               run: |
                   # brew install libomp
@@ -166,11 +163,6 @@ jobs:
               with:
                 python-version: '3.12'
 
-            - name: Install numpy
-              run: |
-                  python -m pip install --upgrade pip
-                  python -m pip install --upgrade numpy
-            
             - name: Build sdist
               run: |
                 python -m pip install build
