--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -83,12 +83,31 @@ jobs:
             # does not need manylinux docker, thuns, CUDA can be installed in
             # the github action's virtual machine using the Jimver's action
             # in the previous action (see above).
-            - name: Build wheels in windows with CUDA (X86_64) Python ${{ matrix.python-version }}
+            # - name: Build wheels in windows with CUDA (X86_64) Python ${{ matrix.python-version }}
+            #   if: matrix.os == 'windows-latest'
+            #   uses: pypa/cibuildwheel@v2.15.0
+            #   env:
+            #       CIBW_ARCHS_WINDOWS: "AMD64 x86"
+            #       CIBW_BUILD: "${{ matrix.python-version }}-win_amd64"
+            #       CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
+            #       CIBW_BUILD_VERBOSITY: 3
+            #       CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
+            #       CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
+            #       CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
+            #   with:
+            #     output-dir: wheelhouse
+
+            # TEST
+            # Build wheel for windows with CUDA enabled. Note that cibuildwheel
+            # does not need manylinux docker, thuns, CUDA can be installed in
+            # the github action's virtual machine using the Jimver's action
+            # in the previous action (see above).
+            - name: Build wheels in windows with CUDA (ARM64) Python ${{ matrix.python-version }}
               if: matrix.os == 'windows-latest'
               uses: pypa/cibuildwheel@v2.15.0
               env:
-                  CIBW_ARCHS_WINDOWS: "AMD64 x86"
-                  CIBW_BUILD: "${{ matrix.python-version }}-win_amd64"
+                  CIBW_ARCHS_WINDOWS: "ARM64"
+                  CIBW_BUILD: "${{ matrix.python-version }}-win_arm64"
                   CIBW_SKIP: "pp* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
