--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -18,7 +18,8 @@ jobs:
                 # os: [ubuntu-latest, windows-latest, macos-latest] # TEST
                 # python-version: ['cp39', 'cp310', 'cp311', 'cp312', 'pp38', 'pp39', 'pp310']
                 os: [windows-latest]
-                python-version: ['pp38', 'pp39', 'pp310']
+                # python-version: ['pp38', 'pp39', 'pp310']
+                python-version: ['cp39', 'cp310', 'cp311', 'cp312', 'pp38', 'pp39', 'pp310']
                 arch: ['x86_64', 'arm64']
                 # exclude: # TEST
                 #     - os: windows-latest
