--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -112,7 +112,7 @@ jobs:
                   CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
-                  CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
+                  CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel; choco install mingw -y"
                   CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
               with:
                 output-dir: wheelhouse
@@ -131,7 +131,8 @@ jobs:
                   CIBW_SKIP: "pp37-* cp36-* cp37-* cp38-*"
                   CIBW_BUILD_VERBOSITY: 3
                   CIBW_ENVIRONMENT: "USE_LONG_INT=0 USE_UNSIGNED_LONG_INT=0 USE_CBLAS=0 USE_CUDA=1 CUDA_DYNAMIC_LOADING=1"
-                  CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
+                  # CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel"
+                  CIBW_BEFORE_BUILD_WINDOWS: "pip install delvewheel; choco install mingw -y"
                   CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: "delvewheel repair -w {dest_dir} {wheel}"
               with:
                 output-dir: wheelhouse
