--- a/.github/workflows/deploy-pypi.yml
+++ b/.github/workflows/deploy-pypi.yml
@@ -82,9 +82,9 @@ jobs:
                   sub-packages: '["nvcc", "visual_studio_integration"]'
                   non-cuda-sub-packages: '["libcublas", "libcusparse"]'
 
-            - name: CHECK CUDA
-              if: matrix.os == 'windows-latest'
-              run: echo "Installed cuda version is: ${{steps.cuda-toolkit.outputs.cuda}}"
+            # - name: CHECK CUDA
+            #   if: matrix.os == 'windows-latest'
+            #   run: echo "Installed cuda version is: ${{steps.cuda-toolkit.outputs.cuda}}"
 
             # Build wheel for windows with CUDA enabled. Note that cibuildwheel
             # does not need manylinux docker, thuns, CUDA can be installed in
