--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -40,7 +40,7 @@ pypi_build_wheels_macosx_arm64_task:
     - env:
         CIBW_BUILD: "cp312-macosx_arm64"
     # - env:
-    #     CIBW_BUILD: "pp38-macosx_arm64"
+    #     CIBW_BUILD: "pp38-macosx_arm64"  # Does not work
     - env:
         CIBW_BUILD: "pp39-macosx_arm64"
     - env:
