--- a/.github/workflows/deploy-conda.yml
+++ b/.github/workflows/deploy-conda.yml
@@ -127,9 +127,9 @@ jobs:
 
             # Upload all wheels to an artifact
             - name: Upload artifacts
-              uses: actions/upload-artifact@v3
+              uses: actions/upload-artifact@v4
               with:
-                  name: wheel-artifacts
+                  name: artifacts-wheel-${{ matrix.os }}-${{ matrix.python-version }}
                   path: ./wheelhouse/*.whl
                   retention-days: 1
 
@@ -161,9 +161,10 @@ jobs:
               uses: actions/checkout@v3
 
             - name: Download artifacts
-              uses: actions/download-artifact@v3
+              uses: actions/download-artifact@v4
               with:
-                  name: wheel-artifacts
+                  pattern: artifacts-*
+                  merge-multiple: true
                   path: dist
 
             - name: Setup Miniconda
@@ -196,7 +197,7 @@ jobs:
                   conda config --set anaconda_upload yes
                   export PATH=$(conda info --root):$PATH
                   export PATH=$(conda info --root)/bin:$PATH
-                  conda-build --output-folder . .
+                  conda build --output-folder conda-bld .
               env:
                   CYTHON_BUILD_IN_SOURCE: '1'  # see setup.py. Avoids a bug when building with multiple python variants
                   ANACONDA_API_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
@@ -206,9 +207,10 @@ jobs:
             # them, however, they will be deleted after the retention days,
             # which I set to one day.
             - name: Delete artifacts
-              uses: geekyeggo/delete-artifact@v1
+              uses: geekyeggo/delete-artifact@v4
               with:
-                  name: wheel-artifacts
+                  token: ${{ secrets.GITHUB_TOKEN }}
+                  name: artifacts-*
 
     test_conda:
         needs: [build_conda]
