--- a/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
+++ b/tools/ci/cirrus_deploy_pypi_macosx_arm64.yml
@@ -53,6 +53,7 @@ pypi_build_wheels_macosx_arm64_task:
     # supplied by isuruf.
     # Find out SDKROOT via `xcrun --sdk macosx --show-sdk-path`
     CIBW_ENVIRONMENT_MACOS: >
+      SDKROOT=$(xcrun --sdk macosx --show-sdk-path)
       LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
       CFLAGS="-I/opt/homebrew/opt/libomp/include $CFLAGS"
       CXXFLAGS="-I/opt/homebrew/opt/libomp/include $CXXFLAGS"
@@ -156,7 +157,6 @@ pypi_test_macosx_arm64_task:
     - uname -m
     - python -c "import platform;print(platform.python_version());print(platform.system());print(platform.machine())"
     - mv imate imate_do_not_import
-    - rm tests/test_cu_linear_operator.py  # this raises ImportError
     - python -m pip install --upgrade pip
     - python -m pip install --prefer-binary --upgrade imate
     - python -m pip install numpy
